Correct spacing related articles title

--- a/src/styles/components/_article-footer.scss
+++ b/src/styles/components/_article-footer.scss
@@ -16,10 +16,12 @@
     justify-content: space-between;
     flex-wrap: nowrap;
     align-items: flex-start;
+    margin-bottom: $space-xl;
 
     @include tablet {
       flex-direction: row;
       align-items: center;
+      margin-bottom: $space-0;
     }
   }
 
